--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "santa",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "./src/assets/app/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./src/assets/splash.png",
+      "image": "./src/assets/app/logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#d62c2c"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -19,12 +19,42 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "foregroundImage": "./src/assets/app/logo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "mn.santa",
+      "versionCode": 2,
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./src/assets/favicon.png"
+    },
+    "plugins": [
+      [
+        "expo-updates",
+        {
+          "username": "tselmen"
+        }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./src/assets/app/notif.png",
+          "color": "#d62c2c"
+        }
+      ]
+    ],
+    "updates": {
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/10d1d125-c31c-4f9a-ac25-41590c79e2c1"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "10d1d125-c31c-4f9a-ac25-41590c79e2c1"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
     }
   }
 }
