--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native-community/netinfo": "^11.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
+    "@shopify/flash-list": "1.4.3",
+    "eslint": "^8.55.0",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
     "expo-image": "~1.3.5",
+    "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
@@ -28,9 +36,7 @@
     "react-native-screens": "~3.22.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
-    "swr": "^2.2.4",
-    "lottie-react-native": "5.1.6",
-    "@shopify/flash-list": "1.4.3"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
