--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@shopify/flash-list": "1.4.3",
     "eslint": "^8.55.0",
     "expo": "~49.0.15",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-image": "~1.3.5",
@@ -36,6 +37,8 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.2.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
     "swr": "^2.2.4"
