--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.2.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
     "swr": "^2.2.4"
