--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native-community/netinfo": "9.3.10",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
@@ -23,6 +24,7 @@
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-image": "~1.3.5",
+    "expo-linear-gradient": "~12.3.0",
     "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -39,10 +41,12 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.2.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "react-native-pager-view": "6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
