--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
+    "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
@@ -45,8 +47,7 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
-    "swr": "^2.2.4",
-    "react-native-pager-view": "6.2.0"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
