--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-render-html": "^6.3.4",
