--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
